--- a/flexsp.html
+++ b/flexsp.html
@@ -1,40 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Panel</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Sáenz Peña Delivery</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        /* Add custom styles here */
+    </style>
 </head>
-<body>
-    <div class="container">
-        <header>
-            <h1>Admin Panel</h1>
-        </header>
-        <nav>
-            <ul>
-                <li><a href="#dashboard">Dashboard</a></li>
-                <li><a href="#users">Users</a></li>
-                <li><a href="#settings">Settings</a></li>
+<body class="bg-gray-200">
+    <header class="bg-green-600 text-white">
+        <div class="container mx-auto p-4">
+            <h1 class="text-2xl">Sáenz Peña Delivery</h1>
+        </div>
+    </header>
+    <nav class="bg-gray-800 text-white p-2">
+        <div class="container mx-auto">
+            <ul class="flex space-x-4">
+                <li><a href="#" class="hover:underline">Home</a></li>
+                <li><a href="#" class="hover:underline">Categories</a></li>
+                <li><a href="#" class="hover:underline">Profile</a></li>
+                <li><a href="#" class="hover:underline">Orders</a></li>
             </ul>
-        </nav>
-        <main>
-            <section id="dashboard">
-                <h2>Dashboard</h2>
-                <p>Welcome to the admin dashboard.</p>
-            </section>
-            <section id="users">
-                <h2>Users</h2>
-                <p>Manage user accounts and roles.</p>
-            </section>
-            <section id="settings">
-                <h2>Settings</h2>
-                <p>Configure application settings.</p>
-            </section>
-        </main>
-        <footer>
-            <p>&copy; 2026 Admin Panel</p>
-        </footer>
-    </div>
+        </div>
+    </nav>
+    <main class="container mx-auto p-4">
+        <section id="store-listings" class="grid grid-cols-1 md:grid-cols-3 gap-4">
+            <div class="bg-white p-4 rounded shadow">
+                <img src="path/to/image1.jpg" alt="Product 1" class="w-full">
+                <h2 class="text-xl">Product 1</h2>
+                <p class="text-gray-700">$10.00</p>
+                <button class="add-to-cart bg-green-600 text-white py-1 px-2 rounded">Add to Cart</button>
+            </div>
+            <div class="bg-white p-4 rounded shadow">
+                <img src="path/to/image2.jpg" alt="Product 2" class="w-full">
+                <h2 class="text-xl">Product 2</h2>
+                <p class="text-gray-700">$15.00</p>
+                <button class="add-to-cart bg-green-600 text-white py-1 px-2 rounded">Add to Cart</button>
+            </div>
+            <!-- Add more products as needed -->
+        </section>
+        <aside id="cart-sidebar" class="fixed right-0 top-0 w-80 bg-white p-4 shadow-lg hidden">
+            <h2 class="text-xl">Shopping Cart</h2>
+            <ul class="cart-items">
+                <!-- Cart items will be dynamically added here -->
+            </ul>
+            <button class="checkout bg-green-600 text-white py-1 px-2 rounded">Checkout</button>
+        </aside>
+    </main>
+    <script>
+        // JavaScript functionalities for cart management, filtering, searching, and order processing
+        const cart = [];
+        document.querySelectorAll('.add-to-cart').forEach(button => {
+            button.onclick = function() {
+                const product = this.parentElement;
+                const productName = product.querySelector('h2').textContent;
+                const productPrice = product.querySelector('p').textContent;
+                cart.push({ name: productName, price: productPrice });
+                updateCart();
+            };
+        });
+        function updateCart() {
+            const cartItems = document.querySelector('.cart-items');
+            cartItems.innerHTML = '';
+            cart.forEach(item => {
+                const li = document.createElement('li');
+                li.textContent = `${item.name} - ${item.price}`;
+                cartItems.appendChild(li);
+            });
+        }
+        // Add more JS functions for search, filter, etc.
+    </script>
 </body>
 </html>
