Update flexsp.html with complete admin panel code for Sáenz Peña Delivery

--- a/flexsp.html
+++ b/flexsp.html
@@ -3,74 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sáenz Peña Delivery</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <style>
-        /* Add custom styles here */
-    </style>
+    <title>Admin Panel - Sáenz Peña Delivery</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chart.js/3.6.0/chart.min.js"></script>
+    <script src="script.js" defer></script>
 </head>
-<body class="bg-gray-200">
-    <header class="bg-green-600 text-white">
-        <div class="container mx-auto p-4">
-            <h1 class="text-2xl">Sáenz Peña Delivery</h1>
-        </div>
+<body>
+    <header>
+        <h1>Sáenz Peña Delivery Admin Panel</h1>
+        <nav>
+            <ul>
+                <li><a href="#login">Login</a></li>
+                <li><a href="#dashboard">Dashboard</a></li>
+                <li><a href="#stores">Stores Management</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#orders">Orders</a></li>
+                <li><a href="#finance">Finance</a></li>
+                <li><a href="#settings">Settings</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav class="bg-gray-800 text-white p-2">
-        <div class="container mx-auto">
-            <ul class="flex space-x-4">
-                <li><a href="#" class="hover:underline">Home</a></li>
-                <li><a href="#" class="hover:underline">Categories</a></li>
-                <li><a href="#" class="hover:underline">Profile</a></li>
-                <li><a href="#" class="hover:underline">Orders</a></li>
-            </ul>
-        </div>
-    </nav>
-    <main class="container mx-auto p-4">
-        <section id="store-listings" class="grid grid-cols-1 md:grid-cols-3 gap-4">
-            <div class="bg-white p-4 rounded shadow">
-                <img src="path/to/image1.jpg" alt="Product 1" class="w-full">
-                <h2 class="text-xl">Product 1</h2>
-                <p class="text-gray-700">$10.00</p>
-                <button class="add-to-cart bg-green-600 text-white py-1 px-2 rounded">Add to Cart</button>
-            </div>
-            <div class="bg-white p-4 rounded shadow">
-                <img src="path/to/image2.jpg" alt="Product 2" class="w-full">
-                <h2 class="text-xl">Product 2</h2>
-                <p class="text-gray-700">$15.00</p>
-                <button class="add-to-cart bg-green-600 text-white py-1 px-2 rounded">Add to Cart</button>
-            </div>
-            <!-- Add more products as needed -->
+    <main>
+        <section id="login">
+            <h2>Login</h2>
+            <form id="loginForm">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+                <button type="submit">Login</button>
+            </form>
         </section>
-        <aside id="cart-sidebar" class="fixed right-0 top-0 w-80 bg-white p-4 shadow-lg hidden">
-            <h2 class="text-xl">Shopping Cart</h2>
-            <ul class="cart-items">
-                <!-- Cart items will be dynamically added here -->
-            </ul>
-            <button class="checkout bg-green-600 text-white py-1 px-2 rounded">Checkout</button>
-        </aside>
+        <section id="dashboard">
+            <h2>Dashboard</h2>
+            <canvas id="salesChart"></canvas>
+        </section>
+        <section id="stores">
+            <h2>Stores Management</h2>
+            <div id="storeList"></div>
+            <button id="addStore">Add Store</button>
+        </section>
+        <section id="products">
+            <h2>Products</h2>
+            <div id="productList"></div>
+            <button id="addProduct">Add Product</button>
+        </section>
+        <section id="orders">
+            <h2>Orders</h2>
+            <div id="orderList"></div>
+        </section>
+        <section id="finance">
+            <h2>Finance</h2>
+            <div id="financeReport"></div>
+        </section>
+        <section id="settings">
+            <h2>Settings</h2>
+            <form id="settingsForm">
+                <label for="setting1">Setting 1:</label>
+                <input type="text" id="setting1" name="setting1">
+                <button type="submit">Save Settings</button>
+            </form>
+        </section>
     </main>
-    <script>
-        // JavaScript functionalities for cart management, filtering, searching, and order processing
-        const cart = [];
-        document.querySelectorAll('.add-to-cart').forEach(button => {
-            button.onclick = function() {
-                const product = this.parentElement;
-                const productName = product.querySelector('h2').textContent;
-                const productPrice = product.querySelector('p').textContent;
-                cart.push({ name: productName, price: productPrice });
-                updateCart();
-            };
-        });
-        function updateCart() {
-            const cartItems = document.querySelector('.cart-items');
-            cartItems.innerHTML = '';
-            cart.forEach(item => {
-                const li = document.createElement('li');
-                li.textContent = `${item.name} - ${item.price}`;
-                cartItems.appendChild(li);
-            });
-        }
-        // Add more JS functions for search, filter, etc.
-    </script>
+    <footer>
+        <p>&copy; 2026 Sáenz Peña Delivery</p>
+    </footer>
 </body>
 </html>
