Updated flexsp.html with a complete admin panel structure.

--- a/flexsp.html
+++ b/flexsp.html
@@ -1,72 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Panel - Sáenz Peña Delivery</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chart.js/3.6.0/chart.min.js"></script>
-    <script src="script.js" defer></script>
-</head>
-<body>
-    <header>
-        <h1>Sáenz Peña Delivery Admin Panel</h1>
-        <nav>
-            <ul>
-                <li><a href="#login">Login</a></li>
-                <li><a href="#dashboard">Dashboard</a></li>
-                <li><a href="#stores">Stores Management</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#orders">Orders</a></li>
-                <li><a href="#finance">Finance</a></li>
-                <li><a href="#settings">Settings</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="login">
-            <h2>Login</h2>
-            <form id="loginForm">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-                <button type="submit">Login</button>
-            </form>
-        </section>
-        <section id="dashboard">
-            <h2>Dashboard</h2>
-            <canvas id="salesChart"></canvas>
-        </section>
-        <section id="stores">
-            <h2>Stores Management</h2>
-            <div id="storeList"></div>
-            <button id="addStore">Add Store</button>
-        </section>
-        <section id="products">
-            <h2>Products</h2>
-            <div id="productList"></div>
-            <button id="addProduct">Add Product</button>
-        </section>
-        <section id="orders">
-            <h2>Orders</h2>
-            <div id="orderList"></div>
-        </section>
-        <section id="finance">
-            <h2>Finance</h2>
-            <div id="financeReport"></div>
-        </section>
-        <section id="settings">
-            <h2>Settings</h2>
-            <form id="settingsForm">
-                <label for="setting1">Setting 1:</label>
-                <input type="text" id="setting1" name="setting1">
-                <button type="submit">Save Settings</button>
-            </form>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2026 Sáenz Peña Delivery</p>
-    </footer>
-</body>
-</html>
+<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">\n    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>\n    <title>Admin Panel</title>\n    <style>\n        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }\n        .container { width: 90%; margin: auto; overflow: hidden; }\n        #navbar { background: #333; color: #fff; padding: 10px 0; }\n        #navbar h1 { float: left; margin: 0; padding: 0 20px; }\n        #navbar ul { list-style: none; padding: 0; }\n        #navbar li { float: right; padding: 0 20px; }\n        #navbar a { color: #fff; text-decoration: none; }\n        .admin-panel { display: flex; }\n        .sidebar { width: 20%; background: #444; color: #fff; height: 100vh; padding: 10px; }\n        .sidebar a { color: #fff; text-decoration: none; display: block; padding: 10px; }\n        .sidebar a:hover { background: #555; }\n        .content { width: 80%; padding: 20px; }\n        h2 { margin-top: 0; }\n        #chartContainer { width: 100%; height: 300px; }\n    </style>\n</head>\n<body>\n    <div id="navbar">\n        <h1>Admin Panel</h1>\n        <ul>\n            <li><a href="#">Logout</a></li>\n        </ul>\n    </div>\n    <div class="container">\n        <div class="admin-panel">\n            <div class="sidebar">\n                <h2>Menu</h2>\n                <a href="#dashboard">Dashboard</a>\n                <a href="#products">Products</a>\n                <a href="#orders">Orders</a>\n                <a href="#finance">Finance Reports</a>\n                <a href="#settings">Settings</a>\n            </div>\n            <div class="content">\n                <section id="dashboard">\n                    <h2>Dashboard</h2>\n                    <canvas id="myChart"></canvas>\n                </section>\n                <section id="products">\n                    <h2>Products</h2>\n                    <!-- Product management will go here -->\n                </section>\n                <section id="orders">\n                    <h2>Orders</h2>\n                    <!-- Orders management will go here -->\n                </section>\n                <section id="finance">\n                    <h2>Finance Reports</h2>\n                    <!-- Finance reports will go here -->\n                </section>\n                <section id="settings">\n                    <h2>Settings</h2>\n                    <!-- Settings will go here -->\n                </section>\n            </div>\n        </div>\n    </div>\n    <script>\n        // Chart.js setup\n        const ctx = document.getElementById('myChart').getContext('2d');\n        const myChart = new Chart(ctx, {\n            type: 'bar',\n            data: {\n                labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],\n                datasets: [{\n                    label: '# of Votes',\n                    data: [12, 19, 3, 5, 2, 3],\n                    backgroundColor: ['rgba(255, 99, 132, 0.2)', 'rgba(54, 162, 235, 0.2)', 'rgba(255, 206, 86, 0.2)', 'rgba(75, 192, 192, 0.2)', 'rgba(153, 102, 255, 0.2)', 'rgba(255, 159, 64, 0.2)'],\n                    borderColor: ['rgba(255, 99, 132, 1)', 'rgba(54, 162, 235, 1)', 'rgba(255, 206, 86, 1)', 'rgba(75, 192, 192, 1)', 'rgba(153, 102, 255, 1)', 'rgba(255, 159, 64, 1)'],\n                    borderWidth: 1\n                }]\n            },\n            options: {\n                scales: {\n                    y: {\n                        beginAtZero: true\n                    }\n                }\n            }\n        });\n    </script>\n</body>\n</html>
