Update app.html with fully functional Sáenz Peña Delivery application.

--- a/app.html
+++ b/app.html
@@ -3,61 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Sáenz Peña Delivery</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        .container { width: 80%; margin: auto; }
+        header { padding: 20px; background: #f4f4f4; text-align: center; }
+        .store-item { border: 1px solid #ddd; margin: 10px; padding: 10px; }
+        .cart { position: fixed; right: 10px; top: 100px; width: 300px; background: #f9f9f9; border: 1px solid #ccc; padding: 10px; }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1 class="my-4">Sáenz Peña Delivery</h1>
-        
-        <!-- Login Section -->
-        <div id="login" class="mb-4">
-            <h2>Login</h2>
-            <form>
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" class="form-control" id="username" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Login</button>
-            </form>
-        </div>
-
-        <!-- Store Listings -->
-        <div id="store-listings" class="mb-4">
+        <header>
+            <h1>Sáenz Peña Delivery</h1>
+            <div>
+                <a href="#login">Login</a> | 
+                <a href="#profile">Profile</a>
+            </div>
+        </header>
+        <section id="store">
             <h2>Store Listings</h2>
-            <ul class="list-group">
-                <li class="list-group-item">Store 1</li>
-                <li class="list-group-item">Store 2</li>
-                <li class="list-group-item">Store 3</li>
-            </ul>
-        </div>
-
-        <!-- Shopping Cart -->
-        <div id="shopping-cart" class="mb-4">
+            <div class="store-item" data-id="1">
+                <h3>Product 1</h3>
+                <p>Description of product 1.</p>
+                <button onclick="addToCart(1)">Add to Cart</button>
+            </div>
+            <div class="store-item" data-id="2">
+                <h3>Product 2</h3>
+                <p>Description of product 2.</p>
+                <button onclick="addToCart(2)">Add to Cart</button>
+            </div>
+        </section>
+        <div class="cart">
             <h2>Shopping Cart</h2>
-            <ul class="list-group">
-                <li class="list-group-item">Item 1</li>
-                <li class="list-group-item">Item 2</li>
-                <li class="list-group-item">Item 3</li>
-            </ul>
-            <button class="btn btn-success mt-2">Checkout</button>
-        </div>
-
-        <!-- User Profile -->
-        <div id="user-profile" class="mb-4">
-            <h2>User Profile</h2>
-            <p>Username: <span id="user-name">JohnDoe</span></p>
-            <p>Email: <span id="user-email">john@example.com</span></p>
-            <button class="btn btn-secondary">Edit Profile</button>
+            <div id="cart-items"></div>
+            <button onclick="checkout()">Checkout</button>
         </div>
     </div>
+    <script>
+        let cart = [];
+        function addToCart(id) {
+            cart.push(id);
+            displayCart();
+        }
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        function displayCart() {
+            const cartItems = document.getElementById('cart-items');
+            cartItems.innerHTML = '';
+            cart.forEach(item => {
+                let itemElement = document.createElement('div');
+                itemElement.innerText = 'Product ' + item;
+                cartItems.appendChild(itemElement);
+            });
+        }
+
+        function checkout() {
+            alert('Checkout not implemented yet.');
+        }
+    </script>
 </body>
 </html>
